test/parsing/errors/commentEOF.chpl
/* this is an unterminated multiline comment
 /* which contains a nested comment */
